<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip Cost Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="public_transit">Public Transit</string>
    <string name="averageMPG">Average MPG</string>
    <string name="mpg">MPG</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="autoscreenPrompt">Enter Your Vehicle Information Below</string>
    <string name="tripscreenPrompt">Enter Your Trip Information Below</string>
    <string name="setStart">Set Start</string>
    <string name="setEnd">Set End</string>
    <string name="currentGasPrice">Current Gas Price</string>
    <string name="yourVehicle">Your Vehicle</string>
    <string name="mainActivityPrompt">Select an option below</string>
    <string name="vehicleSetup">Vehicle Setup</string>
    <string name="calculateTrip">Calculate Trip</string>

</resources>