<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyline_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AutoScreen" >

    <EditText
        android:id="@+id/autoMPG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoYear"
        android:layout_below="@+id/autoYear"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/mpg"
        android:inputType="numberDecimal"
        android:text="@string/averageMPG"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/autoOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/autoMPG"
        android:layout_below="@+id/autoMPG"
        android:layout_marginTop="16dp"
        android:text="@android:string/ok"
        android:textColor="@color/White" />

    <EditText
        android:id="@+id/autoYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoModel"
        android:layout_below="@+id/autoModel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:text="@string/year"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/yourVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/autoMake"
        android:layout_marginTop="22dp"
        android:hint="@string/autoscreenPrompt"
        android:text="@string/autoscreenPrompt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <EditText
        android:id="@+id/autoMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoModel"
        android:layout_below="@+id/yourVehicle"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/make"
        android:text="@string/make"
        android:textColor="@color/White" />

    <EditText
        android:id="@+id/autoModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoMake"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/model"
        android:text="@string/model"
        android:textColor="@color/White" >

        <requestFocus />
    </EditText>

</RelativeLayout>