<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyline_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TripScreen" >

    <TextView
        android:id="@+id/yourVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/tripscreenPrompt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <EditText
        android:id="@+id/startLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourVehicle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/setStart"
        android:textColor="@color/White" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/endLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startLoc"
        android:layout_below="@+id/startLoc"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/setEnd"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/tripOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/gasPrice"
        android:layout_below="@+id/gasPrice"
        android:layout_marginTop="30dp"
        android:text="@android:string/ok"
        android:textColor="@color/White"/>

    <EditText
        android:id="@+id/gasPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endLoc"
        android:layout_below="@+id/endLoc"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/currentGasPrice"
        android:inputType="numberDecimal"
        android:textColor="@color/White" />

</RelativeLayout>